# quantum-query-complexity

./: pyproject.toml
src/: main.py  output
src/lib/: __init__.py  function.py  graph.py
src/lib/tensor/: __init__.py  matrix.py  vector.py
